# truejit

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  docker.base.sh  docker.build.sh  docker.compose.sh  env.sh
.run/: vm-with-compiler (gcc-loops).run.xml
benchmarks/: Benchmarking.py  main.py  run.py  train.py
benchmarks/coremark/: benchmark.json  benchmark.py  coremark.wasm
benchmarks/empty/: empty.wat
benchmarks/ffmpeg/: benchmark.json  benchmark.py  ffmpeg.wasm
benchmarks/jetstream/: suite.py
benchmarks/jetstream/float_mm/: benchmark.py  float-mm.wasm
benchmarks/jetstream/gcc_loops/: benchmark.json  benchmark.py  gcc-loops.wasm  plan.json  spec.json
benchmarks/jetstream/hashset/: benchmark.py  hashset.patch  hashset.wasm
benchmarks/jetstream/quicksort/: benchmark.py  quicksort.wasm
benchmarks/jetstream/tsf/: benchmark.py  tsf.wasm
benchmarks/mibench/: suite.py
benchmarks/mibench/basicmath/: basicmath.wasm  benchmark.py
benchmarks/mibench/bitcount/: benchmark.py  bitcount.wasm
benchmarks/mibench/cjpeg/: benchmark.py  (+1 more)
benchmarks/npb/: suite.py
benchmarks/polybench/: suite.py
benchmarks/spec/: suite.py
benchmarks/sqlite/: benchmark.py  sqlite.wasm
benchmarks/wabench/: suite.py
evaluation/: notebook.shared.py  utility.py
evaluation/bounded-cache/: lab.ipynb  orc.py
evaluation/cluster-memory/: cluster-memory.ipynb
evaluation/compilation-latency/: compilation-latency.ipynb  compilation-latency.new.ipynb
evaluation/compilation-plan/: aot-vs-jit-heuristic.ipynb  call-graph.ipynb  compare.ipynb  heuristic.ipynb  interpretation-cost-estimation.ipynb  key-results.ipynb  lab.ipynb  motivation.ipynb  profiling-accuracy.ipynb  profiling.py  solver.ipynb  solver.py  utils.py
evaluation/execution-timeline/: execution-timeline.ipynb
evaluation/ffmpeg/: build.sh
evaluation/memory-usage/: memory-usage.ipynb  memory-usage.json
evaluation/network-latency-impact/: network-latency-impact.ipynb
evaluation/phase2/: lab.ipynb
evaluation/prediction-accuracy/: prediction-accuracy.ipynb  prediction-accuracy.py
evaluation/server-saturation/: server-saturation.ipynb
evaluation/simd-comparison/: build.sh  lab.ipynb
evaluation/smartjit/: Profiling.py  compare-vms.ipynb  precise-timing.ipynb  predictor.new.ipynb  smartjit.ipynb  specialization.ipynb  timeline.ipynb  tmp.ipynb  train.py
evaluation/specialization/: specialization.ipynb  specialization.py
evaluation/uftrace/: postprocessing.py  uftrace_script.py
evaluation/webassembly-vms-comparison/: benchmarks.json  benchmarks.py  generate_benchmarks.py  virtualmachines.py  webassembly-vms-comparison.compile-time.py  webassembly-vms-comparison.ipynb  webassembly-vms-comparison.py
keys/: private_key.pem  public_key.pem  setup-keys.sh
kubernetes/: cluster.yaml  config.py  deploy.sh
kubernetes/kubespray/: deploy.sh  kubespray.patch  manifest.xml  template.kubeconfig
lib/: Config.h  Config.h.in  ExecutionPlan.h  Globals.h  Logging.h  ThreadPool.h  VirtualMachineCompilerProtocol.h  X86Timer.h
lib/Compiler/: CMakeLists.txt  Compiler.h  Specialization.h  StaticCode.h
lib/Compiler/CompilerClient/: CMakeLists.txt  CompilerClient.Serialization.h  CompilerClient.cpp  CompilerClient.h
lib/Compiler/CompilerServer/: CMakeLists.txt  CompilerServer.cpp  CompilerServer.h
lib/Compiler/CompilerServer/AsyncCompilation/: AsyncCompilation.cpp  AsyncCompilation.h
lib/Compiler/CompilerServer/CompilationService/: CMakeLists.txt  CompilationService.Serialization.h  CompilationService.cpp  CompilationService.h  GlobalCodeCache.h
lib/Compiler/CompilerServer/Predictor/: CMakeLists.txt  LSTMPredictor.cpp  LSTMPredictor.h  PredictionService.cpp  PredictionService.h
lib/Compiler/CompilerServer/RemoteCompilerServer/: RemoteCompilerServer.cpp  RemoteCompilerServer.h
lib/Compiler/CompilerServer/SyncCompilation/: SyncCompilation.cpp  SyncCompilation.h
lib/Compiler/CraneliftCompiler/: CMakeLists.txt  Cargo.toml  CraneliftCompiler.cpp  CraneliftCompiler.h  in.wasm  in.wat  test.cpp
lib/Compiler/CraneliftCompiler/src/: bin.rs  compiler.rs  lib.rs
lib/Compiler/LLVMCompiler/: CMakeLists.txt  LLVMCompiler.cpp  LLVMCompiler.h
lib/Compiler/RemoteCompilerClient/: CMakeLists.txt  RemoteCompilerClient.cpp  RemoteCompilerClient.h
lib/DigitalSignature/: CMakeLists.txt  DigitalSignatureService.cpp  DigitalSignatureService.h
lib/Networking/: CMakeLists.txt  Compilation.h  Orchestration.cpp  Orchestration.h  protocol.proto
lib/Orchestrator/: CMakeLists.txt  Message.Serialization.h  Message.h  Orchestrator.cpp  Orchestrator.h  OrchestratorClient.cpp  OrchestratorClient.h  OrchestratorTransport.cpp  OrchestratorTransport.h
lib/VirtualMachine/: CMakeLists.txt  VMCalls.cpp  VMCalls.h  VirtualMachine.Interp.cpp  VirtualMachine.Serialization.h  VirtualMachine.Wasi.cpp  VirtualMachine.cpp  VirtualMachine.h  WASI.api.def
lib/VirtualMachine/Instrumentation/: CMakeLists.txt  Subscribers.h
lib/VirtualMachine/Instrumentation/BranchProfiler/: BranchProfiler.cpp  BranchProfiler.h
lib/VirtualMachine/Instrumentation/CallProfiler/: CallProfiler.cpp  CallProfiler.h
lib/VirtualMachine/Instrumentation/SpecializationProfiler/: SpecializationProfiler.cpp  SpecializationProfiler.h
lib/VirtualMachine/Instrumentation/WebAssemblyPrinter/: WebAssemblyPrinter.cpp  WebAssemblyPrinter.h
lib/Wasm/: CMakeLists.txt  WasmService.cpp  WasmService.h
misc/: setup-cuda.sh  setup-spec.sh  setup-sqlite3.sh  setup-wasmtime.sh  webassembly-toolchains.sh
models/coremark/: coremark.pt
models/ffmpeg/: ffmpeg.pt
models/sqlite/: sqlite.pt
predictor/: train.lstm.py  train.lstm.single.py
profiles/ffmpeg/: metadata.csv  union.csv
profiles/sqlite/: metadata.csv
scripts/: worker.sh
tools/: CLIOptions.h  CMakeLists.txt  callgraph.cpp  orchestrator.cpp  remote-compiler.cpp  static-compiler.cpp  static-planner.cpp  vm-with-compiler.cpp  vm-without-compiler.cpp  worker.cpp  workers.dev.sh
tools/instrument-source/: CMakeLists.txt  instrument.cpp
(+37731 files in other folders)
