[package]
name = "cranelift_compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "cranelift_compiler"
crate-type = ["staticlib"]

[[bin]]
name = "cranelift_compiler_bin"
path = "src/bin.rs"

[dependencies]
cranelift = { version = "0.114.0", features = ["module", "object", "native", "std"] }
wasmtime = { version = "27.0.0", features = ["default", "reexport-wasmparser"] }
wat = "1.221.2"

wasmparser = "0.221.2"